--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
     </main>
     <footer>
+        <table class="history__list"></table>
         <form class="inputToDo invisible">
             <div class="input__category">
                 <input class="categoryBtn deep" type="button" value="MUST" />
@@ -39,11 +40,15 @@
             </div>
         </form>
         <div class="buttons showing">
-            <span><i class="fas fa-plus add"></i></span>
+            <i class="fas fa-plus add"></i>
+            <div class="history-js history__btn">
+                HISTORY
+            </div>
         </div>
     </footer>
     <script src="js/today.js"></script>
     <script src="js/toDos.js"></script>
+    <script src="js/history.js"></script>
 </body>
 
 </html>
